# openwebuig

./: .env.example  .gitignore  PROJECT_HANDOFF.md  README.md  auditfail  docker-compose.yml  pyproject.toml  reindex
deploy/docker/: run-openwebui.sh.example
deploy/env/: openwebui.env.example  openwebui.ldap.env.example
deploy/nginx/: glavstroy-llm.conf.example
deploy/systemd/: document-search-rag-api.service
eval/: rag_golden.example.json
scripts/: apply_openwebui_branding.py  audit_rag_corpus.py  benchmark_latency.py  corpus_candidate_integrity.py  evaluate_rag.py  fix_openwebui_model_access.py  install_nginx_http_proxy.sh  rebuild_corpus_candidate.py  recreate_openwebui_for_ldap_users.sh  repair_openwebui_access.sh  serve_openai_compatible.py  show_audit_failure.py  step1_extract_corpus.py  step1_validate_extraction.py  step2_chunk_corpus.py  step2_validate_chunks.py  step3_index_chunks.py  step3_init_pgvector.py  step3_validate_index.py  step4_retrieve.py  step5_answer.py
src/document_search/: answering.py  chat_history.py  chunker.py  corpus_audit.py  (+15 more)
tests/: test_chat_history.py  test_corpus_audit.py  test_corpus_rebuild.py  test_document_content.py  test_document_ranking.py  test_external_document_loader.py  test_extraction_pipeline.py  test_ooxml_source.py  test_openai_compatible.py  test_openwebui_access_repair.py  test_openwebui_branding.py  test_openwebui_context.py  test_pgvector_store.py  test_provider_api.py  test_query_router.py  test_rag_evaluation.py  test_serve_openai_compatible.py  test_service_queries.py  test_show_audit_failure.py
(+5 files in other folders)
