[project]
name = "openwebuig"
version = "0.1.0"
description = "OpenAI-compatible gateway for a document RAG with citations."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "python-docx>=1.1.2",
  "psycopg[binary]>=3.2.0",
  "sentence-transformers==5.5.0",
  "torch==2.12.0",
  "uvicorn[standard]>=0.30.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
